Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.10
-
fa2d761e6f (qt/tqtc-qtdeclarative/5.15)
Description
Build attached project and try to run the plugin through ldd -r. It reports undefined symbol _ZN11QQmlPrivate12ConstructorsI6MyItemLb1EE23createSingletonInstanceE.
Same example works fine with gcc 5, but gcc 12.2 at least it produces this. Also this does not seem to happen in Qt 6.
Attachments
For Gerrit Dashboard: QTBUG-106377 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
431690,4 | qqmlprivate.h: make static constexpr members c++11 compliant | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |